[gd_scene load_steps=10 format=3 uid="uid://da1lthymliys6"]

[ext_resource type="Script" path="res://scenes/entities/Leni/Leni.gd" id="1_v1hk0"]
[ext_resource type="PackedScene" uid="uid://c22xqm54cs50" path="res://scenes/entities/Leni/GhostSprite/GhostSprite.tscn" id="2"]
[ext_resource type="Texture2D" uid="uid://d1ijavcsugyxu" path="res://assets/ui/hearts/basic ghost/dead.png" id="2_wh2ov"]
[ext_resource type="Texture2D" uid="uid://ccpts3yanytgf" path="res://assets/ui/hearts/basic ghost/ghost_heart0002.png" id="3_g304m"]
[ext_resource type="Texture2D" uid="uid://ds4f8equvmpwn" path="res://assets/ui/hearts/basic ghost/ghost_heart0001.png" id="4_4qf68"]
[ext_resource type="AudioStream" uid="uid://b75dcfkluv0su" path="res://assets/sound/effects/Misc/ghost_teleport.wav" id="6_nuxj0"]
[ext_resource type="AudioStream" uid="uid://d1llyyet5uqly" path="res://assets/sound/effects/Misc/ghost_posses.wav" id="7_jv76g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lcfmd"]
size = Vector2(27.125, 29.625)

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(17, 72.5)

[node name="Leni" type="CharacterBody2D" node_paths=PackedStringArray("invensible_timer", "sprite")]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_v1hk0")
invensible_timer = NodePath("invencible_timer")
teleport_direction_speed = Vector2(1, 1)
teleport_direction_speed_buffed = Vector2(1.5, 1.5)
after_effect_color_a = Color(0.74, 1, 0.48, 1)
after_effect_color_b = Color(0.71, 1, 0.42, 1)
boosted_after_effect_color_a = Color(0.25, 1, 1, 1)
boosted_after_effect_color_b = Color(0.26, 1, 1, 1)
posses_threshold = 0.2
sprite = NodePath("sprite_offset/Sprite2D")
heart_text = Array[Texture2D]([ExtResource("2_wh2ov"), ExtResource("3_g304m"), ExtResource("4_4qf68")])
max_health = 8
health = 8
speed = Vector2(300, 300)

[node name="sprite_offset" type="Node2D" parent="."]
position = Vector2(0, -48)

[node name="Sprite2D" parent="sprite_offset" instance=ExtResource("2")]
position = Vector2(-2, 6)
scale = Vector2(0.3, 0.3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -35)
shape = SubResource("RectangleShape2D_lcfmd")

[node name="flight_timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="posses_timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="GroundTester" type="Area2D" parent="."]
position = Vector2(1, -39)
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="GroundTester"]
position = Vector2(-0.5, 55)
shape = SubResource("2")

[node name="modulate_timer" type="Timer" parent="."]
one_shot = true

[node name="dazed_timer" type="Timer" parent="."]
one_shot = true

[node name="invencible_timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="unpos_buff_timer" type="Timer" parent="."]
one_shot = true

[node name="jump_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="TeleportSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_nuxj0")
volume_db = 20.0
pitch_scale = 1.5
bus = &"Sound Effects"

[node name="possesSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_jv76g")
volume_db = 5.0
pitch_scale = 1.5
bus = &"Sound Effects"

[node name="posess_cooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="animation_finished" from="sprite_offset/Sprite2D" to="." method="_on_sprite_2d_animation_finished"]
[connection signal="timeout" from="flight_timer" to="." method="_on_flight_timer_timeout"]
[connection signal="timeout" from="posses_timer" to="." method="_on_posses_timer_timeout"]
[connection signal="body_entered" from="GroundTester" to="." method="_on_GroundTester_body_entered"]
[connection signal="body_exited" from="GroundTester" to="." method="_on_GroundTester_body_exited"]
[connection signal="timeout" from="modulate_timer" to="." method="_on_modulate_timer_timeout"]
